# BSS-Application-System

./: mainwindow.cpp  mainwindow.ui
database_schema/: application_system_applications.sql  application_system_documents.sql  application_system_external_users.sql  application_system_internal_users.sql  application_system_roles.sql
frontend-desktop/: .gitignore  CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rsrc.qrc
frontend-desktop/resources/style/: app-dark.qss  app-light.qss  app.qss
frontend-desktop/resources/web/: user-guide.html
frontend-web/: server.js  socialsecurity.css  socialsecurity.html
frontend-web/public/: socialsecurity.css  socialsecurity.html  status.html
server/: package-lock.json  package.json  tsconfig.json
server/src/: server.ts
server/src/routers/: apiRouter.ts
server/test/http/: registerReq.http  requests.http
